# hyprland-easyfocus

./: Cargo.toml  README.md
src/: config.json  main.rs  style.css
