[package]
name = "hyprland-easyfocus"
authors = ["Andrej Benz <hello@benz.dev>"]
description = "Inspired by sway-easyfocus. Focus windows with labels."
keywords = ["hyprland"]
version = "0.4.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/abenz1267/hyprland-easyfocus"
readme = "README.md"

[dependencies]
gtk4-layer-shell = "0.2.0"
hyprland = "=0.4.0-beta.2"
serde = { version = "1.0", features = ["derive"] }
config = "0.14.0"
dirs = "5.0.1"

[dependencies.gtk]
package = "gtk4"
version = "0.7.3"
features = ["v4_12"]
